Fix issues with spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,8 @@
 html {
   box-sizing: border-box;
   font-family: "Crimson Text", sans-serif;
-  font-weight: normal;
   color: #222;
-  line-height: 1.3;
+  line-height: 1.3em;
   padding-right: 1em;
   padding-left: 1em;
 }
@@ -15,35 +14,55 @@ html {
 img {
   width: 100%;
 }
-
-h1 {
-  font-size: 1.5rem;
-  margin-bottom: 0;
-  font-weight: normal
+article header {
+  margin-top: 1.5em;
 }
 
-header > p {
-  margin-top: 0;
-  font-style: italic;
+article h1 {
+  font-size: 1.5rem;
+  margin-bottom: 0;
+  font-weight: normal;
+}
+
+article header p {
+  font-size: 1.125rem;
+  margin-top: .3em;
   margin-bottom: 1.3em;
-  padding-bottom: 1rem;
-  border-bottom: 2px solid #555;
+  font-style: italic;
+  padding-bottom: 1.1em;
+  border-bottom: 1px solid #555;
+}
+
+article p {
+  margin-top: 0;
+  margin-bottom: 1.3em;
 }
 
 body {
+  margin: 0;
   color: #222;
-  font-size: 1.125rem;
+  font-style: normal;
 }
 
 blockquote {
+  margin-top: 0;
+  margin-bottom: 2em;
   color: #999;
 }
 
-ol {
+.quote {
+  font-size: 1.125rem;
+  margin-top: 0;
+
+}
+
+article ol {
   padding-left: 1em;
+  margin-top: 0;
 }
 
 article {
   padding-bottom: 1rem;
-  border-bottom: 2px solid #555;
+  border-bottom: 1px solid #555;
+  margin-bottom: 1.3em;
 }
